--- a/ui.apps/resource/frontend/src/package.json
+++ b/ui.apps/resource/frontend/src/package.json
@@ -8,7 +8,8 @@
     "build": "craco build",
     "test": "craco test",
     "eject": "craco eject",
-    "storybook": "start-storybook -p 8000 -s ./public",
+    "tailwind": "postcss ./tailwind.css -o ./styles/glpg-ctp-112/tailwind-css.scss",
+    "storybook": "start-storybook -p 8000 -s ./public tailwind",
     "build-storybook": "build-storybook -s ./public"
   },
   "repository": {
@@ -20,7 +21,7 @@
     "galpagos",
     "storybook"
   ],
-  "author": "shihab",
+  "author": "Riage",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/bs-23/glpg-hcp-portal/issues"
@@ -52,6 +53,7 @@
     "gulp-util": "^3.0.8",
     "node-sass": "^4.14.1",
     "path": "^0.12.7",
+    "postcss": "^8.4.7",
     "postcss-assets": "^5.0.0",
     "postcss-loader": "^4.0.4",
     "sass-loader": "^8.0.2",
@@ -62,7 +64,7 @@
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "autoprefixer": "^9.8.8",
     "craco": "0.0.3",
-    "postcss": "^7.0.39",
+    "postcss-cli": "^9.1.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
