--- a/ui.apps/resource/frontend/src/package.json
+++ b/ui.apps/resource/frontend/src/package.json
@@ -4,12 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
     "test": "craco test",
     "eject": "craco eject",
     "tailwind": "postcss ./tailwind.css -o ./styles/glpg-ctp-112/tailwind-css.scss",
     "storybook": "start-storybook -p 8000 -s ./public tailwind",
+    "dev": "npm-run-all --parallel tailwind storybook",
     "build-storybook": "build-storybook -s ./public"
   },
   "repository": {
@@ -52,6 +51,7 @@
     "gulp-uglify": "^3.0.2",
     "gulp-util": "^3.0.8",
     "node-sass": "^4.14.1",
+    "npm-run-all": "^4.1.5",
     "path": "^0.12.7",
     "postcss": "^8.4.7",
     "postcss-assets": "^5.0.0",
@@ -63,7 +63,7 @@
   "dependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "autoprefixer": "^9.8.8",
-    "craco": "0.0.3",
+    "flowbite": "^1.3.4",
     "postcss-cli": "^9.1.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
