package.json updated

--- a/ui.apps/resource/frontend/src/package.json
+++ b/ui.apps/resource/frontend/src/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "test": "craco test",
     "eject": "craco eject",
-    "tailwind": "postcss ./tailwind.css -o ./styles/hbk-111/tailwind-css.scss",
+    "tailwind": "postcss ./styles/hbk-111/tailwind/tailwind.css -o ./styles/hbk-111/tailwind-css.scss",
     "storybook": "start-storybook -p 8000 -s ./public",
-    "build-tailwind": "NODE_ENV=production postcss ./tailwind.css -o ./styles/hbk-111/tailwind-build.scss",
+    "build-tailwind": "NODE_ENV=production postcss  ./styles/hbk-111/tailwind/tailwind.css -o ./styles/hbk-111/tailwind-build.scss",
     "build-storybook": "build-storybook -s ./public",
     "dev": "npm-run-all --parallel storybook tailwind",
     "build": "npm-run-all --parallel build-tailwind build-storybook"
