--- a/ui.apps/resource/frontend/src/package.json
+++ b/ui.apps/resource/frontend/src/package.json
@@ -73,6 +73,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "sass": "^1.26.10",
+    "swiper": "^6.8.4",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "tw-elements": "^1.0.0-alpha11"
   }
